[project]
name = "clustervisualizer"
version = "0.1.0"
authors = [
  { name="James Edmond", email="edmondandy795@gmail.com" },
]
description = "Quickly visualize clustered data"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]



[project.urls]  # Optional
"Homepage" = "https://github.com/jae1018/clustervisualizer"



#[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
